--- a/register.html
+++ b/register.html
@@ -39,5 +39,8 @@
   </section>
 
   <!-- Aquí luego agregaremos los scripts de Firebase -->
+  <script type="module" src="js/firebase-config.js"></script>
+<script type="module" src="js/auth.js"></script>
+
 </body>
 </html>
