--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
           <label for="password">Contraseña</label>
           <input id="password" type="password" placeholder="Mínimo 6 caracteres" />
         </div>
-        <button type="button" class="btn-primary full" id="btnRegister">Crear cuenta</button>
+        <button id="btnRegister" type="button" class="btn-primary full">Crear cuenta</button>
       </form>
 
       <p style="margin-top: 1rem; font-size: 0.9rem;">
