Add 'Mi Perfil' link to navigation actions

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="#seguridad">Confianza</a>
       </nav>
       <div class="hw-nav-actions">
+        <a href="profile.html" class="btn-primary">Mi Perfil</a>
         <a href="login.html" class="btn-link">Iniciar sesión</a>
         <a href="register.html" class="btn-primary small">Registrarme</a>
       </div>
