--- a/profile.html
+++ b/profile.html
@@ -99,6 +99,14 @@
       <textarea id="descInput" placeholder="Cuéntale a la gente quién eres y qué sabes hacer..." rows="4"></textarea>
     </div>
 
+    <div class="profile-section" style="display:flex; align-items:center; gap:0.5rem;">
+  <input type="checkbox" id="isWorkerInput">
+  <label for="isWorkerInput" style="font-weight:600;">
+    Quiero ofrecer mis servicios en HonestWork (mostrar mi perfil al público)
+  </label>
+
+    </div>
+
     <button class="btn-primary full" id="saveProfileBtn">Guardar cambios</button>
   </div>
 
