--- a/profile.html
+++ b/profile.html
@@ -57,6 +57,22 @@
       border: 1px solid #d1d5db;
       resize: vertical;
     }
+    .back-btn {
+  display: inline-block;
+  margin: 1rem 2rem;
+  font-size: 0.95rem;
+  color: #4b5563;
+  text-decoration: none;
+  font-weight: 500;
+  background: #f3f4f6;
+  padding: 0.5rem 1rem;
+  border-radius: 0.7rem;
+  transition: 0.2s;
+}
+
+.back-btn:hover {
+  background: #e5e7eb;
+}
   </style>
 </head>
 
@@ -73,6 +89,11 @@
       </div>
     </div>
   </header>
+
+  <a href="index.html" class="back-btn">
+  ⬅ Volver al inicio
+</a>
+
 
   <div class="profile-container">
     <div class="profile-header">
