--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </div>
   </footer>
 
-  <script>
+<!-- DETECTAR LOGIN Y MOSTRAR/OCULTAR BOTONES -->
 <script type="module">
 import { auth } from "./js/firebase-config.js";
 import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
@@ -251,12 +251,10 @@ const profileBtn = document.getElementById("profileBtn");
 
 onAuthStateChanged(auth, (user) => {
   if (user) {
-    // Usuario logueado
     loginBtn.style.display = "none";
     registerBtn.style.display = "none";
     profileBtn.style.display = "inline-block";
   } else {
-    // Usuario NO logueado
     loginBtn.style.display = "inline-block";
     registerBtn.style.display = "inline-block";
     profileBtn.style.display = "none";
@@ -264,9 +262,10 @@ onAuthStateChanged(auth, (user) => {
 });
 </script>
 
-    
-    // Año dinámico en el footer
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+<!-- AÑO EN FOOTER -->
+<script>
+document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
