--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@ onAuthStateChanged(auth, (user) => {
     profileBtn.style.display = "none";
   }
 });
-
+<script>
+  <script>
 document.querySelector(".search-grid button").addEventListener("click", () => {
   const search = document.getElementById("searchText").value.trim();
   const city = document.getElementById("city").value.trim();
@@ -277,8 +278,6 @@ document.querySelector(".search-grid button").addEventListener("click", () => {
 
  <script>
 
-
-<!-- AÑO EN FOOTER -->
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
 </script>
