--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </div>
   </footer>
 
-<!-- Detectar sesión -->
+<!-- DETECTAR USUARIO LOGEADO -->
 <script type="module">
 import { auth } from "./js/firebase-config.js";
 import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
@@ -250,32 +250,23 @@ const registerBtn = document.getElementById("registerBtn");
 const profileBtn = document.getElementById("profileBtn");
 
 onAuthStateChanged(auth, (user) => {
+  console.log("Auth status:", user);
+
   if (user) {
-    loginBtn.style.display = "none";
-    registerBtn.style.display = "none";
-    profileBtn.style.display = "inline-block";
+    // Usuario logueado
+    if (loginBtn) loginBtn.style.display = "none";
+    if (registerBtn) registerBtn.style.display = "none";
+    if (profileBtn) profileBtn.style.display = "inline-block";
   } else {
-    loginBtn.style.display = "inline-block";
-    registerBtn.style.display = "inline-block";
-    profileBtn.style.display = "none";
+    // Usuario NO logueado
+    if (loginBtn) loginBtn.style.display = "inline-block";
+    if (registerBtn) registerBtn.style.display = "inline-block";
+    if (profileBtn) profileBtn.style.display = "none";
   }
 });
-<script>
-  <script>
-document.querySelector(".search-grid button").addEventListener("click", () => {
-  const search = document.getElementById("searchText").value.trim();
-  const city = document.getElementById("city").value.trim();
-  const category = document.getElementById("category").value.trim();
+</script>
 
-  const params = new URLSearchParams();
-
-  if (search) params.append("q", search);
-  if (city) params.append("city", city);
-  if (category) params.append("cat", category);
-
-  window.location.href = "workers.html?" + params.toString();
-});
-
+<!-- FOOTER YEAR -->
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
 </script>
