--- a/profile.html
+++ b/profile.html
@@ -116,6 +116,26 @@
     </div>
 
     <div class="profile-section">
+  <label style="font-weight:600;">Ciudad donde trabajas</label>
+  <input id="cityInput" type="text" placeholder="Ej. Cabo San Lucas" 
+         style="width:100%; padding:0.7rem; border-radius:0.8rem; border:1px solid #d1d5db;">
+</div>
+
+    <div class="profile-section">
+  <label style="font-weight:600;">Categoría principal</label>
+  <select id="categoryInput" 
+          style="width:100%; padding:0.7rem; border-radius:0.8rem; border:1px solid #d1d5db;">
+    <option value="">Selecciona una categoría</option>
+    <option value="Plomería">Plomería</option>
+    <option value="Carpintería">Carpintería</option>
+    <option value="Electricidad">Electricidad</option>
+    <option value="Hotelero / Turismo">Hotelero / Turismo</option>
+    <option value="Limpieza">Limpieza</option>
+    <option value="Transporte">Transporte</option>
+  </select>
+</div>
+
+    <div class="profile-section">
       <label style="font-weight:600;">Descripción profesional:</label>
       <textarea id="descInput" placeholder="Cuéntale a la gente quién eres y qué sabes hacer..." rows="4"></textarea>
     </div>
