--- a/worker.html
+++ b/worker.html
@@ -154,6 +154,18 @@
         <!-- Aquí se inyecta el perfil del trabajador -->
         Cargando perfil...
       </div>
+<div class="worker-section">
+  <div class="worker-section-title">Reseñas verificadas</div>
+  <div id="reviewsContainer">
+    <p class="worker-placeholder">Cargando reseñas...</p>
+  </div>
+
+  <button id="writeReviewBtn" class="btn-secondary" style="margin-top:1rem;">
+    Escribir una reseña
+  </button>
+</div>
+
+      
     </div>
   </section>
 
