--- a/worker.html
+++ b/worker.html
@@ -115,14 +115,59 @@
       color: #111827;
     }
 
-    @media (max-width: 700px) {
-      .worker-card-public {
-        padding: 1.5rem;
-      }
-      .worker-top {
-        flex-direction: column;
-        align-items: flex-start;
-      }
+    /* ===== MODAL DE RESEÑAS ===== */
+    .modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.55);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+    }
+
+    .modal.hidden {
+      display: none;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 2rem;
+      width: 90%;
+      max-width: 420px;
+      border-radius: 1rem;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+      animation: fadeIn .25s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.94); }
+      to   { opacity: 1; transform: scale(1); }
+    }
+
+    .modal-content select,
+    .modal-content textarea {
+      width: 100%;
+      margin-bottom: 1rem;
+      padding: 0.7rem;
+      border: 1px solid #d1d5db;
+      border-radius: .5rem;
+      font-size: .9rem;
+    }
+
+    .review-card {
+      background: #f9fafb;
+      padding: 1rem;
+      border-radius: 0.8rem;
+      margin-bottom: 1rem;
+      border: 1px solid #e5e7eb;
+    }
+
+    .stars {
+      font-size: 1.1rem;
+      color: #f59e0b;
     }
   </style>
 </head>
@@ -146,46 +191,48 @@
   <!-- Contenido -->
   <section class="hw-section">
     <div class="hw-container worker-page">
-      <a href="workers.html" class="back-link">
-        ← Volver al listado
-      </a>
+
+      <a href="workers.html" class="back-link">← Volver al listado</a>
 
       <div id="workerContent" class="worker-card-public">
-        <!-- Aquí se inyecta el perfil del trabajador -->
         Cargando perfil...
       </div>
-<div class="worker-section">
-  <div class="worker-section-title">Reseñas verificadas</div>
-  <div id="reviewsContainer">
-    <p class="worker-placeholder">Cargando reseñas...</p>
-  </div>
 
-  <button id="writeReviewBtn" class="btn-secondary" style="margin-top:1rem;">
-    Escribir una reseña
-  </button>
-<div id="reviewModal" class="modal hidden">
-  <div class="modal-content">
-    <h3>Escribe una reseña</h3>
+      <!-- ===================== RESEÑAS ===================== -->
+      <div class="worker-section">
+        <div class="worker-section-title">Reseñas verificadas</div>
 
-    <label>Calificación</label>
-    <select id="ratingInput">
-      <option value="5">5 estrellas</option>
-      <option value="4">4 estrellas</option>
-      <option value="3">3 estrellas</option>
-      <option value="2">2 estrellas</option>
-      <option value="1">1 estrella</option>
-    </select>
+        <div id="reviewsContainer">
+          <p class="worker-placeholder">Cargando reseñas...</p>
+        </div>
 
-    <label>Comentario</label>
-    <textarea id="commentInput" rows="4" placeholder="¿Qué tal fue el servicio?"></textarea>
+        <button id="writeReviewBtn" class="btn-secondary" style="margin-top:1rem;">
+          Escribir una reseña
+        </button>
+      </div>
 
-    <button id="submitReviewBtn" class="btn-primary">Enviar reseña</button>
-    <button id="closeReviewBtn" class="btn-secondary">Cerrar</button>
-  </div>
+      <!-- ===================== MODAL ===================== -->
+      <div id="reviewModal" class="modal hidden">
+        <div class="modal-content">
+          <h3>Escribe una reseña</h3>
 
-</div>
+          <label>Calificación</label>
+          <select id="ratingInput">
+            <option value="5">5 estrellas</option>
+            <option value="4">4 estrellas</option>
+            <option value="3">3 estrellas</option>
+            <option value="2">2 estrellas</option>
+            <option value="1">1 estrella</option>
+          </select>
 
-      
+          <label>Comentario</label>
+          <textarea id="commentInput" rows="4" placeholder="¿Qué tal fue el servicio?"></textarea>
+
+          <button id="submitReviewBtn" class="btn-primary" style="margin-top:1rem;">Enviar reseña</button>
+          <button id="closeReviewBtn" class="btn-secondary" style="margin-top:.5rem;">Cerrar</button>
+        </div>
+      </div>
+
     </div>
   </section>
 
