--- a/worker.html
+++ b/worker.html
@@ -21,86 +21,30 @@
       box-shadow: 0 18px 40px rgba(15, 23, 42, 0.16);
     }
 
-    .worker-top {
-      display: flex;
-      gap: 1.5rem;
-      align-items: center;
-      margin-bottom: 1.5rem;
-    }
-
-    .worker-avatar-big {
-      width: 88px;
-      height: 88px;
-      border-radius: 50%;
-      background: #e5e7eb;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 700;
-      font-size: 1.8rem;
-      color: #374151;
-      overflow: hidden;
-    }
-
-    .worker-avatar-big img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .worker-section-title {
-      font-size: 1rem;
-      font-weight: 600;
-      margin-bottom: 0.35rem;
-    }
-
-    .worker-section {
-      margin-top: 1.5rem;
-    }
-
-    .worker-placeholder {
-      color: #9ca3af;
-      font-size: .9rem;
-    }
-
-    .review-card {
-      background: #f9fafb;
-      padding: 1rem;
-      border-radius: 0.8rem;
-      margin-bottom: 1rem;
-      border: 1px solid #e5e7eb;
-    }
-
-    .stars {
-      font-size: 1.1rem;
-      color: #f59e0b;
-    }
-
-    /* ========== MODAL ========== */
     .modal {
       position: fixed;
       top:0; left:0;
       width:100%; height:100%;
-      background: rgba(0,0,0,0.55);
+      background: rgba(0,0,0,.5);
       display:flex;
       justify-content:center;
       align-items:center;
-      z-index:3000;
     }
 
-    .modal.hidden { display:none; }
+    .modal.hidden {
+      display:none;
+    }
 
     .modal-content {
-      background:white;
-      padding:2rem;
-      border-radius:1rem;
-      width:90%;
-      max-width:420px;
-      box-shadow:0 10px 30px rgba(0,0,0,.2);
+      background: white;
+      padding: 2rem;
+      border-radius: 1rem;
+      width: 90%;
+      max-width: 400px;
     }
   </style>
-</head>
 
+</head>
 <body>
 
 <header class="hw-header">
@@ -117,11 +61,12 @@
 
     <a href="workers.html" class="back-link">← Volver</a>
 
+    <!-- PERFIL DEL TRABAJADOR -->
     <div id="workerContent" class="worker-card-public">
       Cargando perfil...
     </div>
 
-    <!-- RESEÑAS -->
+    <!-- ⭐⭐ ESTA SECCIÓN ES DONDE VAN LAS RESEÑAS (IMPORTANTE) ⭐⭐ -->
     <div class="worker-section">
       <div class="worker-section-title">Reseñas verificadas</div>
 
@@ -137,7 +82,7 @@
   </div>
 </section>
 
-<!-- MODAL PARA RESEÑA -->
+<!-- MODAL PARA ENVIAR RESEÑA -->
 <div id="reviewModal" class="modal hidden">
   <div class="modal-content">
     <h3>Escribe una reseña</h3>
