Update worker avatar styles in worker.html

--- a/worker.html
+++ b/worker.html
@@ -42,6 +42,13 @@
       width: 90%;
       max-width: 400px;
     }
+    .worker-avatar-big img {
+  width: 88px !important;
+  height: 88px !important;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
   </style>
 
 </head>
