Add styles for review card and stars
Added styles for review card and star rating.

--- a/worker.html
+++ b/worker.html
@@ -48,6 +48,24 @@
   border-radius: 50%;
   object-fit: cover;
 }
+    .review-card {
+  background: #f9fafb;
+  padding: 1rem 1.2rem;
+  border-radius: 0.9rem;
+  margin-bottom: 1rem;
+  border: 1px solid #e5e7eb;
+}
+
+.review-card p {
+  margin: .25rem 0;
+}
+
+.stars {
+  color: #f59e0b;
+  font-size: 1.1rem;
+  margin-bottom: .25rem;
+}
+
 
   </style>
 
