--- a/worker.html
+++ b/worker.html
@@ -135,8 +135,14 @@
     </div>
 
     <!-- ⭐⭐ ESTA SECCIÓN ES DONDE VAN LAS RESEÑAS (IMPORTANTE) ⭐⭐ -->
+    
+    
     <div class="worker-section">
       <div class="worker-section-title">Reseñas verificadas</div>
+
+      <div id="ratingSummary" style="font-size:1rem; font-weight:600; margin-bottom:0.8rem; color:#111827;">
+  Cargando calificación...
+</div>
 
       <div id="reviewsContainer">
         <p class="worker-placeholder">Cargando reseñas...</p>
