--- a/worker.html
+++ b/worker.html
@@ -9,132 +9,69 @@
   <link rel="stylesheet" href="css/style.css">
 
   <style>
-    /* --- CONTENEDOR PRINCIPAL --- */
-    .worker-page {
-      max-width: 900px;
-      margin: 2rem auto;
-    }
+    .worker-page { max-width:900px; margin:2rem auto; }
 
-    /* --- TARJETA DEL PERFIL --- */
     .worker-card-public {
-      background: #ffffff;
-      border-radius: 1.5rem;
-      padding: 2rem;
-      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.16);
+      background:white;
+      border-radius:1.5rem;
+      padding:2rem;
+      box-shadow:0 18px 40px rgba(15,23,42,0.16);
     }
 
-    /* --- AVATAR GRANDE --- */
     .worker-avatar-big {
-      width: 90px;
-      height: 90px;
-      border-radius: 50%;
-      background: #e5e7eb;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:2rem;
-      font-weight:600;
+      width:90px; height:90px;
+      border-radius:50%;
+      background:#e5e7eb;
+      display:flex; align-items:center; justify-content:center;
+      font-size:2rem; font-weight:600;
       overflow:hidden;
     }
 
-    .worker-avatar-big img {
-      width:100%;
-      height:100%;
-      object-fit:cover;
-    }
+    .worker-avatar-big img { width:100%; height:100%; object-fit:cover; }
 
-    /* --- SECCIONES --- */
-    .worker-section {
-      margin-top: 1.8rem;
-    }
+    .worker-section { margin-top:1.8rem; }
 
-    .worker-section-title {
-      font-size:1rem;
-      font-weight:600;
-      margin-bottom:0.4rem;
-    }
-
-    .worker-placeholder {
-      color:#9ca3af;
-      font-size:0.9rem;
-    }
-
-    /* --- MODAL --- */
     .modal {
-      position: fixed;
-      top:0; left:0;
-      width:100%; height:100%;
-      background: rgba(0,0,0,.5);
+      position:fixed;
+      top:0; left:0; width:100%; height:100%;
+      background:rgba(0,0,0,.5);
       display:flex;
-      justify-content:center;
-      align-items:center;
+      align-items:center; justify-content:center;
     }
     .modal.hidden { display:none; }
 
     .modal-content {
       background:white;
-      padding:1.8rem;
+      padding:2rem;
       border-radius:1rem;
-      width:90%;
-      max-width:400px;
+      width:90%; max-width:400px;
     }
 
-    /* --- RESEÑAS --- */
-
+    /* Reseñas */
     .review-card {
       background:#f9fafb;
       border:1px solid #e5e7eb;
-      border-radius:0.9rem;
       padding:1rem 1.2rem;
+      border-radius:.9rem;
       margin-bottom:1rem;
     }
 
-    .review-user {
-      display:flex;
-      align-items:center;
-      gap:0.7rem;
-      margin-bottom:0.2rem;
-    }
-
+    .review-user { display:flex; gap:.8rem; align-items:center; }
     .review-avatar {
-      width:42px;
-      height:42px;
-      border-radius:50%;
+      width:42px; height:42px;
       background:#e5e7eb;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight:600;
-      color:#374151;
+      border-radius:50%;
       overflow:hidden;
+      display:flex; justify-content:center; align-items:center;
+      font-weight:600;
     }
+    .review-avatar img { width:100%; height:100%; object-fit:cover; }
 
-    .review-avatar img {
-      width:100%;
-      height:100%;
-      object-fit:cover;
-    }
-
-    .review-date {
-      font-size:0.78rem;
-      color:#6b7280;
-      margin-top:-2px;
-    }
-
-    .review-stars {
-      color:#f59e0b;
-      font-size:1.1rem;
-      margin:0.3rem 0;
-    }
-
-    .review-comment {
-      font-size:0.95rem;
-      color:#374151;
-    }
-
+    .review-date { color:#6b7280; font-size:.78rem; }
+    .review-stars { color:#f59e0b; font-size:1.1rem; margin:.3rem 0; }
   </style>
-
 </head>
+
 <body>
 
 <header class="hw-header">
@@ -156,27 +93,27 @@
 
     <a href="workers.html" class="back-link">← Volver al listado</a>
 
-    <div id="workerContent" class="worker-card-public">
-      Cargando perfil...
-    </div>
+    <div id="workerContent" class="worker-card-public">Cargando perfil...</div>
 
-    <!-- Reseñas -->
     <div class="worker-section">
-      
       <div class="worker-section-title">Reseñas verificadas</div>
 
+      <!-- ⭐ PROMEDIO -->
       <div id="ratingSummary" style="font-size:1rem;font-weight:600;margin-bottom:0.8rem;color:#111827;">
         Cargando calificación...
       </div>
 
+      <!-- RESEÑAS -->
       <div id="reviewsContainer">
         <p class="worker-placeholder">Cargando reseñas...</p>
       </div>
 
+      <!-- BOTÓN MOSTRAR MODAL -->
       <button id="writeReviewBtn" class="btn-secondary" style="margin-top:1rem;">
         Escribir una reseña
       </button>
 
+      <!-- MODAL PARA ESCRIBIR RESEÑA -->
       <div id="reviewModal" class="modal hidden">
         <div class="modal-content">
           <h3>Escribe una reseña</h3>
