--- a/profile.html
+++ b/profile.html
@@ -114,6 +114,13 @@
       <label style="font-weight:600;">¿Qué oficio tienes?</label>
       <input id="oficioInput" type="text" placeholder="Ej. Plomero, Carpintero, Chofer..." style="width:100%; padding:0.7rem; border-radius:0.8rem; border:1px solid #d1d5db;">
     </div>
+    
+    <div class="profile-section">
+  <label style="font-weight:600;">Número de WhatsApp:</label>
+  <input id="phoneInput" type="text" placeholder="Ej. 6241234567"
+    style="width:100%; padding:0.7rem; border-radius:0.8rem; border:1px solid #d1d5db;">
+</div>
+
 
     <div class="profile-section">
   <label style="font-weight:600;">Ciudad donde trabajas</label>
