--- a/worker.html
+++ b/worker.html
@@ -102,6 +102,12 @@
       <div id="ratingSummary" style="font-size:1rem;font-weight:600;margin-bottom:0.8rem;color:#111827;">
         Cargando calificación...
       </div>
+      
+      <div class="contact-box">
+  <div class="contact-label">Contacto</div>
+  <p id="workerContact"></p>
+</div>
+
 
       <!-- RESEÑAS -->
       <div id="reviewsContainer">
