--- a/profile.html
+++ b/profile.html
@@ -111,6 +111,22 @@
     </div>
 
     <div class="profile-section">
+  <label style="font-weight:600;">Verificación de identidad</label>
+  <p style="font-size:0.9rem; color:#6b7280;">
+    Sube una foto de tu identificación oficial (INE, pasaporte o licencia).
+  </p>
+
+  <input type="file" id="idUploadInput">
+
+  <button id="uploadIdBtn" class="btn-secondary" style="margin-top:0.5rem;">
+    Subir identificación
+  </button>
+
+  <p id="idStatusText" style="margin-top:0.5rem; font-size:0.9rem;"></p>
+</div>
+
+
+    <div class="profile-section">
       <label style="font-weight:600;">¿Qué oficio tienes?</label>
       <input id="oficioInput" type="text" placeholder="Ej. Plomero, Carpintero, Chofer..." style="width:100%; padding:0.7rem; border-radius:0.8rem; border:1px solid #d1d5db;">
     </div>
