--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HonestWork | Encuentra trabajadores confiables cerca de ti</title>
+  <title>TrustyWork | Encuentra trabajadores confiables cerca de ti</title>
 
   <!-- Fuente Google -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
     <div class="hw-container hw-nav">
       <div class="hw-logo">
         <span class="logo-mark">HW</span>
-        <span class="logo-text">HonestWork Los Cabos</span>
+        <span class="logo-text">TrustyWork Los Cabos</span>
       </div>
       <nav class="hw-nav-links">
         <a href="#como-funciona">Cómo funciona</a>
