--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="hw-header">
     <div class="hw-container hw-nav">
       <div class="hw-logo">
-        <span class="logo-mark">HW</span>
+        <span class="logo-mark">TW</span>
         <span class="logo-text">TrustyWork Los Cabos</span>
       </div>
       <nav class="hw-nav-links">
